--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Reddit App</title>
+    <title>RedditXplore App</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/src/assets/icons/reddit-logo.svg"
+    />
   </head>
   <body>
     <div id="root"></div>
