Change app title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>RedditXplore App</title>
+    <title>RedditXplore</title>
     <link
       rel="icon"
       type="image/x-icon"
